[package]
name = "mappit"
version = "0.1.0"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = "1.3.2"
json = "0.12.4"
tokio = { version = "1.2.0", features = ["full"] }
rusqlite = "0.24.2"
serde = "1.0.124"
serde_json = "1.0.64"
edit-distance = "2.1.0"
rayon = "1.5.0"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
