[package]
name = "mappit"
version = "0.1.0"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
edition = "2018"


[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
edit-distance = "2.1.0"
indicatif = "0.15.0"
json = "0.12.4"
log = "0.4.14"
oauth2 = "3.0.0"
pretty_env_logger = "0.4.0"
priority-queue = "1.0.5"
rand = "0.8.3"
rayon = "1.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
roux = "1.3.4"
rusqlite = "0.24.2"
serde = "1.0.124"
serde_json = "1.0.64"
tokio = { version = "1.2.0", features = ["full"] }
